ci/test/chainsaw/assertions/pvc-bound.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: ($name)
  namespace: ($namespace)
status:
  # Verify that the PVC is bound to a PersistentVolume
  phase: Bound
